# tree-sitter-analyzer

./: .autonomous-state.json  .brain_state  .context-reset-marker  .cursorrules  .dockerignore  .gitignore  .kilocodemodes  .mcp.json  .pre-commit-config.yaml  .roomodes  .secrets.baseline  AGENTS.md  ANalyzer-report.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_AND_FIX_PLAN.md  AUTONOMOUS.md  BACKWARD_COMPATIBILITY_DESIGN.md  CHANGELOG.md  CLAUDE.md  CODING_STANDARDS.md  COMMIT_MESSAGE.md  CONDITIONAL_BRANCH_ELIMINATION_PLAN.md  CONTEXT.md  CONTRIBUTING.md  CURRENT_ARCHITECTURE_ANALYSIS_REPORT.md  CURSOR配置说明.md  Cursor测试指南.md  DEBUG_UTILS_GUIDE.md  DEPLOYMENT_GUIDE.md  DESIGN_ISSUES_REPORT.md  Dockerfile  EDUCATIONAL_CONTENT_SYSTEM.md  ENHANCED_PLUGIN_INTERFACE_DESIGN.md  FAILING_TESTS_REPORT.md  FINAL_PROJECT_COMPLETION_REPORT.md  GITFLOW.md  GITFLOW_ja.md  GITFLOW_zh.md  IMPLEMENTATION_ROADMAP.md  ISSUES.json  (+121 more)
v2/: CHANGELOG.md  README.md  ROADMAP.md  codecov.yml  pyproject.toml  python_v2_analysis_result.json  test_python_golden_master.py  v1_python_output.json  v1_python_output.txt
v2/.github/workflows/: quality.yml  release.yml  test.yml
v2/docs/: CODE_GRAPH_QUICKSTART.md  CODE_GRAPH_USAGE.md  JAVA_CODE_GRAPH.md
v2/examples/: basic_analysis.py  format_comparison.py
v2/tests/: test_binary_detection.py  test_mcp_server.py  test_project_structure.py
v2/tests/fixtures/analyze_fixtures/: sample.go  sample.py  sample.rs  sample.ts  sample_c.c
v2/tests/fixtures/cross_file_project/: README.md  config.py  decorated.py  inheritance.py  main.py  tricky.py
v2/tests/fixtures/encoding_fixtures/: japanese_code.py  japanese_shift_jis.txt
v2/tests/fixtures/java_graph/: Service.java  User.java
v2/tests/fixtures/search_fixtures/: sample1.py
v2/tests/integration/: test_api.py  test_cross_file_builder.py  test_cross_file_e2e.py  test_extract_tool.py  test_find_and_grep_tool.py  test_intelligence_tool.py  test_java_code_graph.py  test_java_cross_file.py  test_java_cross_file_advanced.py  test_java_e2e.py  test_mcp_server_registration.py  test_query_tool.py  test_scale_tool.py  test_search_tools.py  test_summary_mode.py  test_visualize_code_graph_tool.py
v2/tests/unit/: test_architecture_sprint456.py  test_base_tool.py  test_call_index_regex.py  test_change_risk.py  test_cli_functions.py  test_code_graph_builder.py  test_code_graph_incremental.py  test_code_graph_multi_file.py  test_code_graph_queries.py  test_code_map.py  test_code_map_intelligence.py  test_code_smells.py  test_encoding.py  test_formatter_registry.py  test_generic_parser.py  test_import_resolver.py  test_incremental_scan.py  test_inheritance_tracking.py  test_java_call_extractor.py  test_java_graph_builder.py  test_java_method_signatures.py  test_java_records.py  test_language_detector.py  test_markdown_readable.py  test_mcp_tools.py  test_mermaid_export.py  test_mermaid_graph.py  test_output_validator.py  test_parallel_scan.py  test_parser_protocol.py  test_performance_fixes.py  test_python_call_extractor.py  test_python_parser.py  test_refactoring_suggestions.py  test_search_engine.py  test_security_validator.py  test_summary_formatter.py  test_test_audit.py  test_token_economics.py  test_token_optimizer.py  (+2 more)
v2/tree_sitter_analyzer_v2/: __init__.py  __main__.py  search.py
v2/tree_sitter_analyzer_v2/api/: __init__.py  interface.py
v2/tree_sitter_analyzer_v2/cli/: main.py
v2/tree_sitter_analyzer_v2/core/: __init__.py  call_extractor_registry.py  config.py  exceptions.py  language_registry.py  parser.py  parser_registry.py  protocols.py  token_optimizer.py  types.py
v2/tree_sitter_analyzer_v2/core/code_map/: __init__.py  call_index.py  constants.py  decorators.py  formatters.py  parallel.py  result.py  scanner.py  types.py
v2/tree_sitter_analyzer_v2/formatters/: markdown_formatter.py  registry.py  summary_formatter.py
v2/tree_sitter_analyzer_v2/graph/: __init__.py  builder.py  cross_file.py  export.py  extractors.py  imports.py  incremental.py  queries.py  symbols.py
v2/tree_sitter_analyzer_v2/languages/: __init__.py  generic_parser.py  java_constants.py  java_parser.py  profiles.py  python_parser.py  typescript_parser.py
v2/tree_sitter_analyzer_v2/mcp/: server.py
v2/tree_sitter_analyzer_v2/mcp/tools/: __init__.py  analyze.py  base.py  (+9 more)
v2/tree_sitter_analyzer_v2/models/: __init__.py
v2/tree_sitter_analyzer_v2/plugins/: __init__.py
v2/tree_sitter_analyzer_v2/security/: validator.py
v2/tree_sitter_analyzer_v2/utils/: __init__.py  binaries.py  encoding.py
(+4832 files in other folders)
